--- a/src/UI/Folder/folder.css
+++ b/src/UI/Folder/folder.css
@@ -54,3 +54,15 @@
 .Minus{
     margin-bottom: -10px;
 }
+.inputEdit{
+    width: 100%;
+    padding: 5px;
+    color: black;
+    outline: none;
+    font-size: 13px;
+    border-radius: 4px;
+    border: 1px solid #cb0532;
+}
+.Car_Folder_selector{
+    margin-left: 20px;
+}
